--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,6 @@
 main {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -8,13 +8,14 @@ main {
 .elevator {
   border: 1px solid black;
   width: 15%;
+  height: 800px;
 }
 .elevator-cabine {
-  position: absolute;
+  position: relative;
   background-color: blue;
-  width: 15%;
-  height: 20vh;
-  bottom: 0;
+  width: 100%;
+  height: 160px;
+  top: 640px;
 }
 .buttons {
   border: 1px solid black;
@@ -23,11 +24,15 @@ main {
 .flours {
   display: flex;
   flex-direction: column-reverse;
-  height: 100%;
+  height: 800px;
 }
 .flour {
-  height: 20%;
+  height: 160px;
   border-bottom: 1px solid black;
+}
+button {
+  height: 100%;
+  width: 100px;
 }
 hr {
   margin: 0;
