--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,6 +16,24 @@ main {
   width: 100%;
   height: 160px;
   top: 640px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.elevator-cabine-table{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+   font-size: x-large;
+    background-color: aliceblue ;
+    width: 50px;
+    height: 25px;
+    border: 2px solid black;
+}
+.elevator-cabine-table-text{
+font-size: medium;
+
 }
 .buttons {
   border: 1px solid black;
